@@ -7592,6 +7592,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\include\wx\persist\splitter.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\include\wx\splitter.h"
 				>
 			</File>
